crates/lang/macro/tests/ui/trait_def/fail/invalid_namespace_3.stderr
error: encountered invalid Rust identifier for the ink! namespace configuration parameter
 --> $DIR/invalid_namespace_3.rs:3:37
  |
3 | #[ink::trait_definition(namespace = "")]
  |                                     ^^
